<resources>
    <string name="app_name" translatable="false">AlertBLO</string>
    <string name="txt_alert_blo" translatable="false">AlertBLO</string>
    <string name="txt_todas">Todas</string>
    <string name="txt_alertas_recientes">Recientes</string>
    <string name="txt_critica">Criticas</string>
    <string name="txt_aviso">Avisos</string>
    <string name="txt_historial_alertas">Historial</string>
    <string name="txt_titulo" translatable="false">titulo</string>
    <string name="txt_descripcion" translatable="false">descripcion</string>
    <string name="txt_fechahora" translatable="false">fechahora</string>
    <string-array name="idiomas">
        <item>Castellano</item>
        <item>Valenciano</item>
    </string-array>
    <string name="txt_salir">Salir</string>
    <string name="txt_confirmar_salir">Confirmar salir</string>
    <string name="txt_si">Si</string>
    <string name="txt_cancelar">Cancelar</string>
    <string name="tit_menu_idioma">Cambiar idioma</string>
    <string name="txt_aceptar">Aceptar</string>
    <string name="tit_inicio">Inicio</string>
    <string name="tit_historial">Historial</string>
    <string name="tit_ajustes">Ajustes</string>
</resources>