<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="24dp" >

    <TextView
        android:id="@+id/txtAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_alert_blo"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="55dp" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayoutAlertas"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:clickable="true"
        android:focusable="true"
        android:background="#0A1128" >

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_alertasrecientes" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_historial_alertas" />

    </com.google.android.material.tabs.TabLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <com.google.android.material.chip.ChipGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipTodas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_todas" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipAlertaCritica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_critica"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chipAlertaNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_aviso" />

        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewAlertas"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>